# libraryInC

./: README.md
Hello/: CMakeLists.txt
Hello/include/: greeting_en.h
helloLib_shared/: CMakeList.txt  CMakeLists.txt
helloLib_shared/include/: greeting_jp.h  greeting_vi.h
helloLib_shared/src/: greeting_jp.c
helloLid_static/: CMakeLists.txt
helloLid_static/src/: greeting_en.c  greeting_vi.c
useLib/: CMakeLists.txt
useLib/src/: main.c
